@@ -287,7 +287,7 @@ EXTER object sSAsystem_directoryA;
 EXTER char *kcl_self;
 #endif
 #if !defined(IN_MAIN) || !defined(ATT)
-EXTER bool initflag;
+EXTER bool initflag,raw_image;
 #endif
 char *merge_system_directory();
 
